# ndt_omp

./: CMakeLists.txt  README.md
apps/: align.cpp
cmake/: LibraryConfig.cmake  SetEnv.cmake
example/: CMakeLists.txt
pclomp/: CMakeLists.txt  ndt_omp_impl.hpp
